# tpaf

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
devtools/: check-release.py
doc/man/: tpafd.8.md
man/: tpafd.8.html  tpafd.8.md
src/daemon/: main.c  tpaf_version.h.in
src/proto/: msg.c  msg.h  proto_conn.c  proto_conn.h  proto_ta.c  proto_ta.h  server.c  server.h
src/sd/: client.c  client.h  client_map.h  conn.c  conn.h  db.c  db.h  filter.c  filter.h  flist.c  flist.h  generation.c  generation.h  props.c  props.h  pvalue.c  pvalue.h  sd.c  sd.h  sd_err.c  sd_err.h  service.c  service.h  service_map.h  sub.c  sub.h  sub_map.h  sub_match.h
src/util/: log.c  log.h  log_ut.h  plist.c  plist.h  pmap.c  pmap.h  pqueue.c  pqueue.h  sbuf.c  sbuf.h  slist.c  slist.h  util.c  util.h
test/: testutil.c  testutil.h
test/sd/: filter_testcases.c  props_testcases.c  sd_testcases.c  value_testcases.c
test/util/: pmap_testcases.c  pqueue_testcases.c
